--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "chalk": "^5.6.2",
     "next": "16.0.1",
     "prisma": "^6.19.0",
     "react": "19.2.0",
